fixed dropdown z-index

--- a/apps/app/src/compontents/Dropdown/Dropdown.module.scss
+++ b/apps/app/src/compontents/Dropdown/Dropdown.module.scss
@@ -60,6 +60,7 @@
     position: absolute;
     top: 86px;
     width: 100%;
+    z-index: 100;
 
     .innerContainer {
       display: block;
